Fix backend connection leak and remove deprecated API usage
Address resource leaks and deprecated-API risks identified across the
codebase: an unclosed reverse-proxy backend connection, a TLS handshake
socket leak, several startup-time InputStream leaks, and dependencies
on classes/methods slated for removal in future httpcore5/JDK
releases.

- Fix the reverse proxy's backend connection leak: ReverseProxyHandler
  never closed the ClientHttpConnection it opened per request. Scope
  reuse per backend target host (Map<HttpHost, ClientHttpConnection>
  on DefaultWorker) and shut down every held connection when the
  worker exits, mirroring the existing client-side lifecycle. Scoping
  by target host avoids sharing a connection across two different
  backends when one worker serves multiple reverse-proxy routes.
- Replace the wholly-deprecated httpcore5 BasicHttpContext with
  HttpCoreContext everywhere it was used, in both main and test
  sources (2 production call sites plus 25 test call sites across 13
  files).
- Close the socket on TLS handshake failure in
  ReverseUtils.createLayeredSocket(); the existing exception-swallowing
  behavior in the caller is unchanged.
- Replace Class.newInstance() with
  Class.getDeclaredConstructor().newInstance() in ClassUtils, used by
  the DI container's bean-creation path.
- Close 6 previously-unclosed startup-time InputStreams (SSL keystore
  loading in DefaultSSLContextCreator/SSLSNIContextCreator/ReverseUtils,
  and XML config parsing in
ServiceConfigParser/SpringBeanDefineHandler).
- Remove 14 deprecated members with no remaining callers from
  RequestUtils, ReverseUtils, BackEndKeepAliveConnReuseStrategy,
  KeepAliveConnReuseStrategy, ServerHttpConnection, and SocketWrapper;
  update the tests that referenced them.
- Investigate the streaming file-response path
(LocalFileStreamingHttpHandler)
  for a suspected entity-replacement leak; confirm none of the
  ResponseFilter/HttpResponseInterceptor implementations touch the
  en